# whe

./: INSTALL.mb  INSTALL.md  README.md  package-lock.json  package.json
collector/: Procfile  collector_init.d  collector_supervisor.conf  whe-delete-images.sh
collector/api/: main.js
collector/api/lib/: images.js  metadata.js
collector/api/public/: dashboard.html  index.html  screen.html
collector/api/test-image/: test-image.sh
collector/macs/: database.js  import-data.js  main.js
collector/macs/data/: oui-small.txt  oui-wireshark.txt  oui.sqlite3
collector/macs/models/: manufacturer.js
emitter/: Procfile
emitter/motor/: motorController.js  motor_supervisor.conf
emitter/sender/: imageSender.js  image_sender_init.d  image_sender_supervisor.conf  metadataSender.js  metadata_sender_init.d  metadata_sender_supervisor.conf  sender.js  sender_init.d
emitter/snapper/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.snapper  INSTALL  Makefile  README.txt  camcv_vid3  camcv_vid3.cpp  camcv_vid3_md.cpp  camcv_vid3_mt.cpp  cmake_install.cmake  faye.js  snapper_init.d  snapper_supervisor.conf  start.sh
emitter/snapper/testServer/: Procfile  server.rb
emitter/sniffer/: README.txt  faye.js  sniffer_init.d  sniffer_supervisor.conf  start.sh  startAirodump.js  start_wifi_saver.sh  write_wifi_data.py
emitter/trigger/: trigger.py  trigger_init.d  trigger_supervisor.conf
printer/: Procfile  main.js  permissions.sh  permissions_init.d  printer_init.d  printer_supervisor.conf
shared/: config.json  exclusions.json  fstab  supervisor.conf  utils.js
(+4 files in other folders)
